# pkgbuild-rs

./: Cargo.toml  README.md  build.rs
examples/: README.md  benchmark.rs  cachegit.rs  download.rs  dump_all.rs  genscript.rs  jail.rs  printsrcinfo.rs  spawner.rs  vercmp.rs
src/: child_ios.rs  error.rs  lib.rs  main.rs  parse_pkgbuild.bash  parser.rs  parser_options.rs  parser_script.rs  parser_script_builder.rs  pkgbuild.rs  serde_optional_bytes_arrays.rs
src/script/: 10_source_config_and_start_loop.bash  10_source_lib_config.bash  20_func_dump_array.bash  20_pkgver_and_arch.bash  21_func_dump_array_with_optional_arch.bash  22_func_extract_package_vars.bash  30_arch_end_any_init_other.bash  30_loop_start.bash  40_arch_end_other_package_start.bash  50_pkg_until_cases.bash  50_pkg_until_plain.bash  60_pkg_end_cases.bash  60_pkg_until_array.bash  70_pkg_array_til_dump.bash  80_pkg_arch_end_any_init_other.bash  90_pkg_end_other.bash  full.bash
