[package]
name = "pkgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
log = "0.4"
tempfile = "3.8"

[dependencies.libc]
optional = true
version = "0.2"

[dependencies.nix]
optional = true
version = "0.27"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_bytes]
optional = true
version = "0.11"

[features]
default = []
format = []
nothread = ["libc", "nix/fs"]
unsafe_str = []
vercmp = []
serde = ["dep:serde", "serde/derive", "serde_bytes"]

[[example]]
name = "download"
path = "examples/download.rs"
required-features = ["format"]

[[example]]
name = "printsrcinfo"
path = "examples/printsrcinfo.rs"
required-features = ["format"]

[[example]]
name = "vercmp"
path = "examples/vercmp.rs"
required-features = ["vercmp"]