[package]
name = "pkgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
log = "0.4"

[dependencies.libc]
optional = true
version = "0.2"

[dependencies.nix]
optional = true
version = "0.27"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_bytes]
optional = true
version = "0.11"

[dependencies.tempfile]
optional = true
version = "3.8"

[features]
default = ["tempfile"]
format = []
nothread = ["libc", "nix/fs"]
serde = ["dep:serde", "serde/derive", "serde_bytes"]
tempfile = ["dep:tempfile"]
unsafe_str = []
vercmp = []

[[example]]
name = "download"
path = "examples/download.rs"
required-features = ["format", "tempfile"]

[[example]]
name = "dump_all"
path = "examples/dump_all.rs"
required-features = ["format", "tempfile"]

[[example]]
name = "printsrcinfo"
path = "examples/printsrcinfo.rs"
required-features = ["format", "tempfile"]

[[example]]
name = "vercmp"
path = "examples/vercmp.rs"
required-features = ["vercmp"]