[package]
name = "pkgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
log = "0.4"

[dependencies.clap]
optional = true
version = "4.5"
features = ["derive"]

[dependencies.git2]
optional = true
version = "0.18"

[dependencies.libc]
optional = true
version = "0.2"

[dependencies.nix]
optional = true
version = "0.29"

[dependencies.rmp-serde]
optional = true
version = "1.1"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_bytes]
optional = true
version = "0.11"

[dependencies.tempfile]
optional = true
version = "3.10"

[dependencies.url]
optional = true
version = "2.5"

[features]
default = ["tempfile"]
format = []
nothread = ["libc", "nix/fs"]
serde = ["dep:serde", "serde/derive", "serde_bytes"]
srcinfo = ["format"]
tempfile = ["dep:tempfile"]
unsafe_str = []
vercmp = []
__cachegit = ["clap", "git2", "url"]
__msgpack = ["serde", "rmp-serde"]

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "cachegit"
path = "examples/cachegit.rs"
required-features = ["__cachegit"]

[[example]]
name = "download"
path = "examples/download.rs"
required-features = ["format", "tempfile"]

[[example]]
name = "dump_all"
path = "examples/dump_all.rs"
required-features = ["tempfile"]

[[example]]
name = "genscript"
path = "examples/genscript.rs"

[[example]]
name = "jail"
path = "examples/jail.rs"
required-features = ["tempfile", "__msgpack"]

[[example]]
name = "printsrcinfo"
path = "examples/printsrcinfo.rs"
required-features = ["srcinfo", "tempfile"]

[[example]]
name = "spawner"
path = "examples/spawner.rs"
required-features = ["tempfile", "__msgpack"]

[[example]]
name = "vercmp"
path = "examples/vercmp.rs"
required-features = ["vercmp"]
